<resources>
    <string name="app_name">Android Marketplace</string>
    <string name="nome_marca_centralizado_view">\t\t\t\t\t\t\tAndroid\nMarketplace</string>

    <!-- Traduções de UI -->
    <string name="palavra_cap_usuario">Usuário</string>
    <string name="palavra_cap_senha">Senha</string>
    <string name="palavra_cap_entrar">Entrar</string>
    <string name="frase_criar_conta">Criar nova conta</string>
    <string name="frase_senha_esquecida">Esqueceu sua senha?</string>
    <string name="frase_criando_conta">Criando nova conta</string>
    <string name="frase_nome_usuario">Novo nome de usuário</string>
    <string name="frase_nova_senha">Nova senha</string>
    <string name="frase_pergunta_seguranca">Pergunta de Segurança</string>
    <string name="frase_sua_resposta_perg_seguranca">Sua Resposta para a pergunta de segurança</string>
    <string name="frase_insira_sua_resp_perg_seguranca">Insira sua resposta aqui</string>
    <string name="frase_qual_foi_seu_primeiro_animal_estimacao">Qual foi seu primeiro animal de estimação?</string>
    <string name="frase_nenhuma_pergunta_selecionada">Nenhuma pergunta selecionada</string>
    <string name="frase_salvar_conta">Salvar nova conta</string>
    <string name="frase_nome_conta">Nomeie sua conta</string>
    <string name="palavra_alerta">ATENÇÃO</string>
    <string name="palavra_aceitar_alerta">Prosseguir</string>
    <string name="frase_preencha_campos_login">Preencha os campos de login e tente novamente.</string>
    <string name="frase_conta_criada_com_sucesso">Conta cadastrada com sucesso!</string>
    <string name="frase_sessao_iniciada_com_sucesso">Sessão iniciada com sucesso!</string>
    <string name="palavra_principal">Principal</string>
    <string name="frase_exibir_produtos">Exibir produtos</string>
    <string name="frase_exibir_pedidos">Exibir pedidos</string>
    <string name="frase_novo_produto">Novo Produto</string>
    <string name="frase_cadastro_produto">Cadastro de produto</string>
    <string name="frase_nome_produto">Nome do Produto</string>
    <string name="frase_descricao_produto">Descrição do Produto</string>
    <string name="frase_preco_produto">Preço do Produto</string>
    <string name="frase_salvar_produto">Salvar Produto</string>
    <string name="frase_alteracoes_salvas">As alterações foram salvas</string>
    <string name="frase_listagem_produtos">Listagem de Produtos</string>
    <string name="frase_listagem_pedidos">Listagem de Pedidos</string>
    <string name="frase_cadastro_pedido">Cadastro de Pedido</string>
    <string name="frase_nome_cliente">Nome do cliente</string>
    <string name="frase_endereco_cliente">Endereço do cliente</string>
    <string name="frase_itens_pedido">Visualizar itens do pedido</string>
    <string name="frase_salvar_pedido">Salvar pedido</string>
    <string name="frase_pedido_selecionado">Pedido: {0}</string>
    <string name="frase_produto_selecionado">Produto: {0}</string>
    <string name="palavra_visualizar">Visualizar</string>
    <string name="palavra_remover">Remover</string>
    <string name="frase_produtos_pedido">Itens do Pedido</string>
    <string name="frase_selecione_um_produto">Selecione um produto</string>
    <string name="palavra_quantidade">Quantidade</string>
    <string name="frase_preco_original">Preço Original</string>
    <string name="frase_preco_venda">Preço de Venda</string>
    <string name="frase_valor_desconto">Valor de Desconto</string>
    <string name="frase_total_item">Total do Item</string>
    <string name="palavra_salvar">Salvar</string>
    <string name="palavra_cancelar">Cancelar</string>
    <string name="frase_pedido_item_produto_necessario">Selecione um produto para salvar.</string>
    <string name="frase_pedido_item_quantidade_necessario">A quantidade do produto deve ser maior que ZERO.</string>
    <string name="frase_total_produtos">Total de Produtos</string>
    <string name="frase_total_itens">Total de Itens</string>
    <string name="frase_total_pedido">Total do Pedido</string>
    <string name="frase_recuperacao_conta">Recuperação de Conta</string>
    <string name="frase_login_conta">Login da conta</string>
    <string name="frase_recuperar_conta">Recuperar Conta</string>
    <string name="frase_senha_alterada_com_sucesso">Senha alterada com sucesso</string>
    <string name="frase_login_conta_deve_ser_fornecido">O login da conta deve ser fornecido.</string>

    <!-- Traduções de regras de negócio -->
    <string name="frase_exception_campos_obrigatorios_em_falta">Os seguintes campos obrigatórios estão em falta:</string>
    <string name="frase_exception_campos_muito_grandes">Os seguintes campos estão acima do tamanho limite de caracteres:</string>

    <string name="frase_falha_ao_aplicar_algoritmo_assinatura">Não foi possível aplicar o algoritmo de assinatura {0}.</string>
    <string name="frase_obrigatorio_selecionar_tipo_pergunta_seguranca">É necessário selecionar um tipo de pergunta de segurança.</string>
    <string name="frase_falha_ao_atualizar_entidade">Não foi possível atualizar a entidade {0}.</string>
    <string name="frase_falha_ao_salvar_entidade">Não foi possível salvar a entidade {0}.</string>
    <string name="frase_falha_ao_deletar_entidade">Não foi possível deletar a entidade {0}.</string>

    <string name="frase_falha_ao_conectar_ao_banco_de_dados">Não foi possível iniciar o banco de dados.</string>
    <string name="frase_falha_ao_fazer_login">Houve uma falha na tentativa de realização de login.</string>
    <string name="frase_operacao_requer_usuario_logado">É necessário realizar login para essa operação.</string>

    <!-- Traduções nomenclatura de colunas de entidades -->
    <!-- |- Usuário -->
    <string name="frase_usuario_coluna_nome">Nome de Usuário</string>
    <string name="frase_usuario_coluna_login">Login do Usuário</string>
    <string name="palavra_usuario_coluna_senha">Senha</string>
    <string name="frase_usuario_tipo_pergunta_seguranca">Tipo de Pergunta de Segurança</string>
    <string name="frase_usuario_resposta_perg_seguranca">Resposta da Pergunta de Segurança</string>

    <string name="frase_usuario_com_login_ja_existe">Um usuário com o mesmo login já está cadastrado.</string>
    <string name="frase_login_usuario_nao_encontrado">O usuário {0} não foi encontrado.</string>
    <string name="frase_resposta_pergunta_seguranca_invalida">Resposta inválida para a pergunta de segurança do usuário {0}.</string>

    <!-- |- Produto -->
    <string name="palavra_produto_coluna_descricao">Descrição</string>
    <string name="palavra_produto_coluna_preco">Preço</string>
    <string name="frase_impossivel_cadastrar_produtos_sem_preco">Não é possível cadastrar um produto sem um preço.</string>

    <!-- |- Pedido -->
    <string name="frase_pedido_coluna_idusuario">Usuário do Pedido</string>
    <string name="frase_pedido_coluna_cliente">Nome do Cliente do Pedido</string>
    <string name="frase_pedido_coluna_endereco">Endereço do Pedido</string>
    <string name="frase_pedido_coluna_data_pedido">Data do Pedido</string>
    <string name="frase_pedido_coluna_total_itens">Total de Itens</string>
    <string name="frase_pedido_coluna_total_produtos">Total de Produtos</string>
    <string name="frase_pedido_coluna_valor_total">Valor Total do Pedido</string>

    <string name="frase_pedido_nao_encontrado">O Pedido não foi encontrado no sistema.</string>

    <!-- |- PedidoItem -->
    <string name="frase_pedido_item_coluna_idproduto">Produto do Item</string>
    <string name="frase_pedido_item_coluna_idpedido">Pedido do Item</string>
    <string name="frase_pedido_item_coluna_quantidade">Quantidade de Itens</string>
    <string name="frase_pedido_item_coluna_preco_venda">Preço de Venda</string>
    <string name="frase_pedido_item_coluna_valor_desconto">Valor de Desconto</string>
    <string name="frase_pedido_item_coluna_preco_original">Preço Original do Produto</string>
    <string name="frase_pedido_item_coluna_preco_venda_abaixo_zero">O preço de venda do pedido deve ser igual ou maior que ZERO.</string>
    <string name="frase_pedido_item_coluna_quantidade_abaixo_zero">A quantidade do pedido deve ser acima de ZERO.</string>

    <string name="frase_pedido_do_item_nao_encontrado">O Pedido do Item não foi encontrado no sistema.</string>

    <string name="title_activity_listagem_produtos">Listagem de Produtos</string>
    <string name="title_activity_listagem_pedidos">ListagemPedidosActivity</string>
    <string name="title_activity_listagem_produto_pedido">ListagemProdutoPedidoActivity</string>

</resources>
