<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".visao.RecuperarContaActivity">

    <TextView
        android:id="@+id/recuperarContaTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/frase_recuperacao_conta"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.228"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <TextView
        android:id="@+id/linhaTextView"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recuperarContaTextView"
        app:layout_constraintVertical_bias="0.026" />

    <EditText
        android:id="@+id/loginRecEditText"
        android:layout_width="378dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/frase_login_conta"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linhaTextView"
        app:layout_constraintVertical_bias="0.145" />

    <TextView
        android:id="@+id/pergSegRecTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/frase_pergunta_seguranca"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginRecEditText"
        app:layout_constraintVertical_bias="0.022" />

    <EditText
        android:id="@+id/respostaSegurancaEditText"
        android:layout_width="378dp"
        android:layout_height="200dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/frase_sua_resposta_perg_seguranca"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pergSegRecTextView"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/senhaRecEditText"
        android:layout_width="378dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/frase_nova_senha"
        android:inputType="numberPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/respostaSegurancaEditText"
        app:layout_constraintVertical_bias="0.057" />

    <Button
        android:id="@+id/recContaButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/frase_recuperar_conta"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/senhaRecEditText"
        app:layout_constraintVertical_bias="0.066" />
</androidx.constraintlayout.widget.ConstraintLayout>