<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".visao.EdicaoPedidoActivity">

    <TextView
        android:id="@+id/cadastroPedidoTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/frase_cadastro_pedido"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.139"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <EditText
        android:id="@+id/nomeClienteEditText"
        android:layout_width="315dp"
        android:layout_height="47dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/frase_nome_cliente"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cadastroPedidoTextView"
        app:layout_constraintVertical_bias="0.155" />

    <EditText
        android:id="@+id/enderecoClienteEditText"
        android:layout_width="315dp"
        android:layout_height="100dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/frase_endereco_cliente"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nomeClienteEditText"
        app:layout_constraintVertical_bias="0.028" />

    <EditText
        android:id="@+id/dataPedidoEditText"
        android:layout_width="315dp"
        android:layout_height="47dp"
        android:editable="false"
        android:ems="10"
        android:enabled="false"
        android:inputType="date"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enderecoClienteEditText"
        app:layout_constraintVertical_bias="0.025" />

    <Button
        android:id="@+id/itensPedidoButton"
        android:layout_width="315dp"
        android:layout_height="47dp"
        android:text="@string/frase_itens_pedido"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dataPedidoEditText"
        app:layout_constraintVertical_bias="0.038" />

    <Button
        android:id="@+id/salvarPedidoButton"
        android:layout_width="315dp"
        android:layout_height="47dp"
        android:text="@string/frase_salvar_pedido"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itensPedidoButton"
        app:layout_constraintVertical_bias="0.042" />
</androidx.constraintlayout.widget.ConstraintLayout>