<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".visao.EdicaoProdutoActivity">

    <TextView
        android:id="@+id/cadastroProdutoTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/frase_cadastro_produto"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.156"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <EditText
        android:id="@+id/descricaoProdutoEditText"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/frase_descricao_produto"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linhaTextView"
        app:layout_constraintVertical_bias="0.147" />

    <EditText
        android:id="@+id/precoProdutoEditText"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/frase_preco_produto"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descricaoProdutoEditText"
        app:layout_constraintVertical_bias="0.03" />

    <Button
        android:id="@+id/salvarProdutoButton"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/frase_salvar_produto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/precoProdutoEditText"
        app:layout_constraintVertical_bias="0.06" />

    <TextView
        android:id="@+id/linhaTextView"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cadastroProdutoTextView"
        app:layout_constraintVertical_bias="0.02" />
</androidx.constraintlayout.widget.ConstraintLayout>