<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".visao.CriarContaActivity">

    <TextView
        android:id="@+id/criandoContaTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/frase_criando_conta"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.134"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <EditText
        android:id="@+id/novoUsuarioEditText"
        style="@style/Widget.AppCompat.AutoCompleteTextView"
        android:layout_width="303dp"
        android:layout_height="47dp"
        android:layout_marginTop="56dp"
        android:ems="10"
        android:gravity="center"
        android:inputType="textPersonName"
        android:singleLine="true"
        android:text="@string/frase_nome_usuario"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/criandoContaTextView"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/novaSenhaEditText"
        style="@style/Widget.AppCompat.AutoCompleteTextView"
        android:layout_width="303dp"
        android:layout_height="47dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/frase_nova_senha"
        android:inputType="textPassword"
        android:singleLine="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/novoUsuarioEditText"
        app:layout_constraintVertical_bias="0.034" />

</androidx.constraintlayout.widget.ConstraintLayout>